# web_applications_django

task_manager/: pyproject.toml
