[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Vilson Lopes <vilsonlopes@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
